--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server.js",
-    "render-postbuild": "echo 'Starting render-postbuild' && prisma generate && echo 'Prisma generate complete' && node prisma/mark-migration-applied.js && echo 'Marked migration as applied' && prisma migrate deploy --accept-data-loss && echo 'Migrations applied' && npm run build && echo 'Build complete' && node prisma/seed.js && echo 'Seed script complete' || (echo 'Build failed but continuing deployment' && npm run build)",
-    "seed": "node prisma/seed.js"
+    "render-postbuild": "echo 'Starting render-postbuild' && prisma generate && echo 'Prisma generate complete' && node prisma/mark-migration-applied.js && echo 'Marked migration as applied' && prisma migrate deploy --accept-data-loss && echo 'Migrations applied' && npm run build && echo 'Build complete' && node prisma/seed.js && echo 'Seed script complete'"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
@@ -17,10 +16,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "handlebars": "^4.7.8",
+    "i18next": "^23.16.0",
+    "i18next-browser-languagedetector": "^7.2.1",
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.3",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
