--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server.js",
-    "render-postbuild": "echo 'Starting render-postbuild' && prisma generate && echo 'Prisma generate complete' && node prisma/mark-migration-applied.js && echo 'Marked migration as applied' && prisma migrate deploy --accept-data-loss && echo 'Migrations applied' && npm run build && echo 'Build complete' && node prisma/seed.js && echo 'Seed script complete'"
+    "render-postbuild": "prisma generate && prisma db push --accept-data-loss && npm run build && node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
