--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server.js",
-    "render-postbuild": "npm install && prisma generate && prisma db push --accept-data-loss && npm run build && node prisma/seed.js"
+    "render-postbuild": "npm install && npx prisma generate && npx prisma db push --accept-data-loss && npm run build && node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
