--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && node ./node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "start": "node server.js",
     "render-postbuild": "npm install && npx prisma generate && npx prisma db push --accept-data-loss && npm run build && node prisma/seed.js"
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.3",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "vite": "^5.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -38,7 +39,6 @@
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "typescript": "^5.2.2"
   }
 }
