--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && node ./node_modules/vite/bin/vite.js build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server.js",
     "render-postbuild": "npm install && npx prisma generate && npx prisma db push --accept-data-loss && npm run build && node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.20.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -23,8 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.3",
-    "react-router-dom": "^6.22.2",
-    "vite": "^5.1.4"
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -37,8 +36,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "prisma": "^5.10.2",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
   }
 }
