--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && node ./node_modules/vite/bin/vite.js build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server.js",
     "render-postbuild": "npm install && npx prisma generate && npx prisma db push --accept-data-loss && npm run build && node prisma/seed.js"
